--- a/configuracion.json
+++ b/configuracion.json
@@ -124,7 +124,7 @@
   },
   "servicios": {
     "nombre1": "Conoce nuestros",
-    "nombre2": "Servicios",
+    "nombre2": "Eventos",
     "card": [
       {
         "id": 1,
