--- a/configuracion.json
+++ b/configuracion.json
@@ -169,7 +169,7 @@
 
   "servicios": {
     "nombre1": "Conoce nuestros",
-    "nombre2": "Eventos",
+    "nombre2": "Eventos y Servicios",
 
     "card": [
       {
