--- a/configuracion.json
+++ b/configuracion.json
@@ -175,13 +175,13 @@
 
   "servicios": {
     "nombre1": "Conoce nuestros",
-    "nombre2": "Eventos y Servicios",
+    "nombre2": "Eventos",
 
     "card": [
       {
         "id": 1,
         "imagen": "Card1.webp",
-        "titulo": "Mudanzas residenciales y empresariales",
+        "titulo": "El castillo de BARBAZUL",
         "descripcion": "Transportamos su mercacia dentro y fuera de la ciudad con los mejores presios del mercado con responsabilidad y calidad.",
         "tamanoletraH2": "150%",
         "tamanoletraP": "93%",
@@ -209,7 +209,7 @@
       {
         "id": 2,
         "imagen": "Card2.jpg",
-        "titulo": "Transporte especializado de motos",
+        "titulo": "Diego el Cigala",
         "descripcion": "Garantizamos un manejo de calidad. Gracias a nuestro Equipo Logístico con amplia experiencia en el traslado de motos a nivel urbano y nacional servicio prestado puerta a puerta.",
         "tamanoletraH2": "150%",
         "tamanoletraP": "89%",
@@ -237,7 +237,7 @@
       {
         "id": 3,
         "imagen": "Card3.webp",
-        "titulo": "Empaque y embalaje.",
+        "titulo": "Milagos",
         "descripcion": "La tranquilidad de nuestros clientes es de suma importancia. Por lo anterior, empacamos y embalamos sus pertenecías con el mayor cuidado y para eso contamos con personal calificado y material de alta calidad para garantizar el éxito de nuestros servicios.",
         "tamanoletraH2": "150%",
         "tamanoletraP": "82%",
