--- a/configuracion.json
+++ b/configuracion.json
@@ -182,6 +182,9 @@
         "id": 1,
         "imagen": "Card1.webp",
         "titulo": "El castillo de BARBAZUL",
+        "fecha": "31-10-2023",
+        "hora": "11:50",
+        "lugar": "la castellana",
         "descripcion": "Transportamos su mercacia dentro y fuera de la ciudad con los mejores presios del mercado con responsabilidad y calidad.",
         "tamanoletraH2": "150%",
         "tamanoletraP": "93%",
