--- a/configuracion.json
+++ b/configuracion.json
@@ -181,7 +181,7 @@
       {
         "id": 1,
         "imagen": "Card1.webp",
-        "titulo": "El castillo de BARBAZUL",
+        "titulo": "El castillo de BARBAZUL 2",
         "fecha": "31-10-2023",
         "hora": "11:30",
         "lugar": "La castellana",
