--- a/configuracion.json
+++ b/configuracion.json
@@ -184,7 +184,7 @@
         "titulo": "El castillo de BARBAZUL 2",
         "fecha": "31-10-2023",
         "hora": "11:30",
-        "lugar": "La castellana",
+        "lugar": "Teatro Jorge Eliécer Gaitán",
         "descripcion": "Transportamos su mercacia dentro y fuera de la ciudad con los mejores presios del mercado con responsabilidad y calidad.",
         "tamanoletraH2": "150%",
         "tamanoletraP": "93%",
@@ -213,6 +213,9 @@
         "id": 2,
         "imagen": "Card2.jpg",
         "titulo": "Diego el Cigala",
+        "fecha": "31-10-2023",
+        "hora": "11:30",
+        "lugar": "Teatro Jorge Eliécer Gaitán",
         "descripcion": "Garantizamos un manejo de calidad. Gracias a nuestro Equipo Logístico con amplia experiencia en el traslado de motos a nivel urbano y nacional servicio prestado puerta a puerta.",
         "tamanoletraH2": "150%",
         "tamanoletraP": "89%",
@@ -241,6 +244,9 @@
         "id": 3,
         "imagen": "Card3.webp",
         "titulo": "Milagos",
+        "fecha": "31-10-2023",
+        "hora": "11:30",
+        "lugar": "Teatro Jorge Eliécer Gaitán",
         "descripcion": "La tranquilidad de nuestros clientes es de suma importancia. Por lo anterior, empacamos y embalamos sus pertenecías con el mayor cuidado y para eso contamos con personal calificado y material de alta calidad para garantizar el éxito de nuestros servicios.",
         "tamanoletraH2": "150%",
         "tamanoletraP": "82%",
@@ -269,6 +275,9 @@
         "id": 4,
         "imagen": "Card4.webp",
         "titulo": "Logística y distribución de mercancía.",
+        "fecha": "31-10-2023",
+        "hora": "11:30",
+        "lugar": "Teatro Jorge Eliécer Gaitán",
         "descripcion": "Hacemos toda la logistica y distribucion de sus productos",
 
       "tamanoletraH2": "150%",
@@ -298,6 +307,9 @@
         "id": 5,
         "imagen": "Card5.webp",
         "titulo": "Servicio Expreso o compartido a nivel nacional",
+        "fecha": "31-10-2023",
+        "hora": "11:30",
+        "lugar": "Teatro Jorge Eliécer Gaitán",
         "descripcion": "Contamos con servicio expreso o consolidado. Realizamos despachos a lo largo del territorio nacional, contamos con camiones de diferentes capacidades con base en las necesidades del servicio contratado.",
         "tamanoletraH2": "145%",
         "tamanoletraP": "79%",
@@ -326,6 +338,9 @@
         "id": 6,
         "imagen": "Card6.webp",
         "titulo": "Mudanzas residenciales y empresariales",
+        "fecha": "31-10-2023",
+        "hora": "11:30",
+        "lugar": "Teatro Jorge Eliécer Gaitán",
         "descripcion": "Transportamos su mercacia dentro y fuera de la ciudad con los mejores presios del mercado con responsabilidad y calidad.",
         "tamanoletraH2": "150%",
         "tamanoletraP": "93%",
@@ -354,6 +369,9 @@
         "id": 7,
         "imagen": "Card7.webp",
         "titulo": "Transporte especializado de motos",
+        "fecha": "31-10-2023",
+        "hora": "11:30",
+        "lugar": "Teatro Jorge Eliécer Gaitán",
         "descripcion": "Garantizamos un manejo de calidad. Gracias a nuestro Equipo Logístico con amplia experiencia en el traslado de motos a nivel urbano y nacional servicio prestado puerta a puerta.",
         "tamanoletraH2": "150%",
         "tamanoletraP": "89%",
@@ -382,6 +400,9 @@
         "id": 8,
         "imagen": "Card8.webp",
         "titulo": "Empaque y embalaje.",
+        "fecha": "31-10-2023",
+        "hora": "11:30",
+        "lugar": "Teatro Jorge Eliécer Gaitán",
         "descripcion": "La tranquilidad de nuestros clientes es de suma importancia. Por lo anterior, empacamos y embalamos sus pertenecías con el mayor cuidado y para eso contamos con personal calificado y material de alta calidad para garantizar el éxito de nuestros servicios.",
         "tamanoletraH2": "150%",
         "tamanoletraP": "82%",
@@ -410,6 +431,9 @@
         "id": 9,
         "imagen": "Card9.webp",
         "titulo": "Logística y distribución de mercancía.",
+        "fecha": "31-10-2023",
+        "hora": "11:30",
+        "lugar": "Teatro Jorge Eliécer Gaitán",
         "descripcion": "Hacemos toda la logistica y distribucion de sus productos",
 
       "tamanoletraH2": "150%",
@@ -439,6 +463,9 @@
         "id": 10,
         "imagen": "Card10.webp",
         "titulo": "Servicio Expreso o compartido a nivel nacional",
+        "fecha": "31-10-2023",
+        "hora": "11:30",
+        "lugar": "Teatro Jorge Eliécer Gaitán",
         "descripcion": "Contamos con servicio expreso o consolidado. Realizamos despachos a lo largo del territorio nacional, contamos con camiones de diferentes capacidades con base en las necesidades del servicio contratado.",
         "tamanoletraH2": "145%",
         "tamanoletraP": "79%",
@@ -467,6 +494,9 @@
         "id": 11,
         "imagen": "Card11.webp",
         "titulo": "Servicio Expreso o compartido a nivel nacional",
+        "fecha": "31-10-2023",
+        "hora": "11:30",
+        "lugar": "Teatro Jorge Eliécer Gaitán",
         "descripcion": "Contamos con servicio expreso o consolidado. Realizamos despachos a lo largo del territorio nacional, contamos con camiones de diferentes capacidades con base en las necesidades del servicio contratado.",
         "tamanoletraH2": "145%",
         "tamanoletraP": "79%",
@@ -495,6 +525,9 @@
         "id": 12,
         "imagen": "Card12.webp",
         "titulo": "Mudanzas residenciales y empresariales",
+        "fecha": "31-10-2023",
+        "hora": "11:30",
+        "lugar": "Teatro Jorge Eliécer Gaitán",
         "descripcion": "Transportamos su mercacia dentro y fuera de la ciudad con los mejores presios del mercado con responsabilidad y calidad.",
         "tamanoletraH2": "150%",
         "tamanoletraP": "93%",
@@ -523,6 +556,9 @@
         "id": 13,
         "imagen": "Card13.webp",
         "titulo": "Transporte especializado de motos",
+        "fecha": "31-10-2023",
+        "hora": "11:30",
+        "lugar": "Teatro Jorge Eliécer Gaitán",
         "descripcion": "Garantizamos un manejo de calidad. Gracias a nuestro Equipo Logístico con amplia experiencia en el traslado de motos a nivel urbano y nacional servicio prestado puerta a puerta.",
         "tamanoletraH2": "150%",
         "tamanoletraP": "89%",
@@ -551,6 +587,9 @@
         "id": 14,
         "imagen": "Card14.webp",
         "titulo": "Empaque y embalaje.",
+        "fecha": "31-10-2023",
+        "hora": "11:30",
+        "lugar": "Teatro Jorge Eliécer Gaitán",
         "descripcion": "La tranquilidad de nuestros clientes es de suma importancia. Por lo anterior, empacamos y embalamos sus pertenecías con el mayor cuidado y para eso contamos con personal calificado y material de alta calidad para garantizar el éxito de nuestros servicios.",
         "tamanoletraH2": "150%",
         "tamanoletraP": "82%",
@@ -579,6 +618,9 @@
         "id": 15,
         "imagen": "Card15.webp",
         "titulo": "Logística y distribución de mercancía.",
+        "fecha": "31-10-2023",
+        "hora": "11:30",
+        "lugar": "Teatro Jorge Eliécer Gaitán",
         "descripcion": "Hacemos toda la logistica y distribucion de sus productos",
 
       "tamanoletraH2": "150%",
@@ -608,6 +650,9 @@
         "id": 16,
         "imagen": "Card16.webp",
         "titulo": "Servicio Expreso o compartido a nivel nacional",
+        "fecha": "31-10-2023",
+        "hora": "11:30",
+        "lugar": "Teatro Jorge Eliécer Gaitán",
         "descripcion": "Contamos con servicio expreso o consolidado. Realizamos despachos a lo largo del territorio nacional, contamos con camiones de diferentes capacidades con base en las necesidades del servicio contratado.",
         "tamanoletraH2": "145%",
         "tamanoletraP": "79%",
